--- a/index.html
+++ b/index.html
@@ -9,35 +9,37 @@
 </head>
 <body>
     <footer class="bg-[#659f8f] dark:bg-[#313131]">
-        <div class="container">
-            <footer class="bg-[#659f8f] dark:bg-[#313131]">
-                <div class="container px-6 py-12 mx-auto">
-                    <div class="grid">
-                        <div class="sm:col-span-2">
-                            <h1 class="max-w-lg" >Subscribe.</h1>
+        <div class="m-auto">
+            <footer class="bg-[#659f8f] dark:bg-[#313131] font-sans pt-[100px] pb-[100px] ">
+                <div class="px-6 py-12 mx-auto w-[80%] ">
+                    <div class="flex flex-row pb-[20px]">
+                        <div class="w-[50%] h-[150px] text-[17px] pb-[20px]">
+                            <h3 class="text-[25px]">Subscribe to our newsletter for updates</h3>
                             <div class="flex">
-                                <input id="email" type="text">
+                                <input class="h-[40px] w-[190px] rounded-[5px] border-none pl-[15px] pt-[2px] pb-[2px] mr-[8px] font-sans box-border " type="text">
                                 <button class="w-full px-6 py-2.5 bg-white">
                                     Subscribe
                                 </button>
                             </div>
                         </div>
-                        <div>
-                            <p class="text-[#313131]">Quick Link</p>
-                            <div class="flex">
-                                <a href="#">Home</a>
-                                <a href="#">Who We Are</a>
-                                <a href="#">Our Philosophy</a>
-                            </div>
+                     <div class="flex justify-evenly w-[50%]"> 
+                        <div class="w-[25%] h-[150px]">
+                            <h4 class="text-[#313131]">Quick Link</h4>
+                            <ul>
+                                <li>Home</li>
+                                <li>Who We Are</li>
+                                <li>Our Philosophy</li>
+                            </ul>
                         </div>
-                        <div>
-                            <p class="text-[#313131]">Technologies</p>
-                            <div class="">
-                                <a href="#">HTML</a>
-                                <a href="#">CSS</a>
-                                <a href="#">JavaScript</a>
-                            </div>
+                        <div class="w-[25%] h-[150px]">
+                            <h4 class="text-[#313131]">Technologies</h4>
+                            <ul>
+                                <li>HTML</li>
+                                <li>CSS</li>
+                                <li>JavaScript</li>
+                            </ul>
                         </div>
+                     </div>   
                     </div>
                     
                     <hr class="my-6 border-[#d86943]">
@@ -47,6 +49,7 @@
                             <img class="w-auto h-7" src="https://codespace-assets.global.ssl.fastly.net/wp/assets/website/codespace-primary-logo-light.svg" alt="">
                         </a>
                     </div>
+        </div>            
     </footer>
 
 </body>
