--- a/index.html
+++ b/index.html
@@ -1,56 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Footer Example</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-</head>
-<body>
-    <footer class="bg-[#659f8f] dark:bg-[#313131]">
-        <div class="m-auto">
-            <footer class="bg-[#659f8f] dark:bg-[#313131] font-sans pt-[100px] pb-[100px] ">
-                <div class="px-6 py-12 mx-auto w-[80%] ">
-                    <div class="flex flex-row pb-[20px]">
-                        <div class="w-[50%] h-[150px] text-[17px] pb-[20px]">
-                            <h3 class="text-[25px]">Subscribe to our newsletter for updates</h3>
-                            <div class="flex">
-                                <input class="h-[40px] w-[190px] rounded-[5px] border-none pl-[15px] pt-[2px] pb-[2px] mr-[8px] font-sans box-border " type="text">
-                                <button class="w-full px-6 py-2.5 bg-white">
-                                    Subscribe
-                                </button>
-                            </div>
-                        </div>
-                     <div class="flex justify-evenly w-[50%]"> 
-                        <div class="w-[25%] h-[150px]">
-                            <h4 class="text-[#313131]">Quick Link</h4>
-                            <ul>
-                                <li>Home</li>
-                                <li>Who We Are</li>
-                                <li>Our Philosophy</li>
-                            </ul>
-                        </div>
-                        <div class="w-[25%] h-[150px]">
-                            <h4 class="text-[#313131]">Technologies</h4>
-                            <ul>
-                                <li>HTML</li>
-                                <li>CSS</li>
-                                <li>JavaScript</li>
-                            </ul>
-                        </div>
-                     </div>   
-                    </div>
-                    
-                    <hr class="my-6 border-[#d86943]">
-                    
-                    <div class="flex">
-                        <a href="#">
-                            <img class="w-auto h-7" src="https://codespace-assets.global.ssl.fastly.net/wp/assets/website/codespace-primary-logo-light.svg" alt="">
-                        </a>
-                    </div>
-        </div>            
-    </footer>
+    <link
+      href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <footer
+      class="bg-[#659f8f] dark:bg-[#313131] font-sans pt-[100px] pb-[100px]"
+    >
+      <div class="m-auto w-[80%]">
+        <div class="flex flex-row">
+          <div
+            class="w-[50%] h-[150px] text-[17px] pb-[20px] text-[rgb(53,49,49)]"
+          >
+            <h3 class="text-[22px] pb-[15px] font-bold font-sans mt-[20px]">
+              Subscribe to our newsletter for updates.
+            </h3>
+            <div class="flex">
+              <input
+                class="h-[40px] w-[190px] rounded-[5px] border-none pl-[15px] pt-[2px] pb-[2px] mr-[8px] font-sans box-border text-[13px]"
+                type="text"
+                placeholder="Email Address"
+              />
+              <button
+                class="rounded-[5px] h-[40px] w-[120px] bg-[#d86943] border-none text-white font-sans font-bold box-border text-[13px]"
+              >
+                Subscribe
+              </button>
+            </div>
+          </div>
+          <div class="flex justify-evenly w-[50%]">
+            <div
+              class="w-[25%] h-[150px] text-[15px] pb-[20px] text-[rgb(53,49,49)]"
+            >
+              <h4 class="pb-[15px] pt-[22px] font-bold">Quick Link</h4>
+              <ul class="text-[15px] leading-[30px] text-[rgb(53,49,49)]">
+                <li>Home</li>
+                <li>Who are we?</li>
+                <li>Our Philosophy</li>
+              </ul>
+            </div>
+            <div
+              class="w-[25%] h-[150px] text-[15px] pb-[20px] text-[rgb(53,49,49)]"
+            >
+              <h4 class="pb-[15px] pt-[22px] font-bold">Technologies</h4>
+              <ul class="text-[15px] leading-[30px] text-[rgb(53,49,49)]">
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+              </ul>
+            </div>
+          </div>
+        </div>
 
-</body>
+        <hr class="border-[#d86943] w-auto mt-[20px]" />
+        <a href="#">
+          <img
+            class="w-[180px] mt-[20px]"
+            src="https://codespace-assets.global.ssl.fastly.net/wp/assets/website/codespace-primary-logo-light.svg"
+            alt=""
+          />
+        </a>
+      </div>
+    </footer>
+  </body>
 </html>
